apps/base/immich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    homelab.io/app: "true"
    homelab.io/needs-database: "true"
