apps/base/immich/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v1.144.1
          command: ["/bin/sh"]
          args: ["./start.sh", "immich"]
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-library
